
find_package(LibEV REQUIRED)
find_package(SQLite3 REQUIRED)

set(DB_SRC
    db/db_attribute_tbl.cpp
    db/db_character_race_tbl.cpp
    db/db_character_tbl.cpp
    db/db_character_type_tbl.cpp
    db/db_chat_channel_tbl.cpp
    db/db_game_data_tbl.cpp
    db/db_gender_tbl.cpp
    db/db_map_tbl.cpp
    db/db_season_tbl.cpp
    db/db_attribute_tbl.h
    db/db_character_inventory_tbl.h
    db/db_character_race_tbl.h
    db/db_character_tbl.h
    db/db_character_type_tbl.h
    db/db_chat_channel_tbl.h
    db/db_game_data_tbl.h
    db/db_gender_tbl.h
    db/db_map_tbl.h
    db/db_season_tbl.h

    db/database_functions.cpp
    db/database_functions.h
)
set(SRC broadcast_actor_functions.cpp
character_creation.cpp
character_inventory.cpp
character_movement.cpp
character_race.cpp
characters.cpp
chat.cpp
client_protocol_handler.cpp
date_time_functions.cpp
file_functions.cpp
gender.cpp
hash_commands.cpp
idle_buffer.cpp
initialise_server.cpp
logging.cpp
log_in.cpp
main.cpp
maps.cpp
movement.cpp
numeric_functions.cpp
pathfinding.cpp
season.cpp
server_messaging.cpp
server_protocol_functions.cpp
server_start_stop.cpp
string_functions.cpp
)
set(INCLUDES
    attributes.h
    broadcast_actor_functions.h
    character_inventory.h
    character_movement.h
    character_race.h
    character_race_tbl.h
    characters.h
    character_type.h
    chat.h
    client_protocol.h
    client_protocol_handler.h
    clients.h
    colour.h
    date_time_functions.h
    file_functions.h
    game_data.h
    gender.h
    global.h
    hash_commands.h
    idle_buffer.h
    initialise_server.h
    items.h
    logging.h
    log_in.h
    maps.h
    movement.h
    numeric_functions.h
    pathfinding.h
    season.h
    server_messaging.h
    server_parameters.h
    server_protocol_functions.h
    server_protocol.h
    server_start_stop.h
    string_functions.h
)
include_directories(${LIBEV_INCLUDE_DIR})
add_executable(unoff ${SRC} ${INCLUDES} ${DB_SRC})
target_link_libraries(unoff ${LIBEV_LIBRARY} ${SQLITE3_LIBRARIES})
